--- a/navbar project/app/components/Pleasework/style.css
+++ b/navbar project/app/components/Pleasework/style.css
@@ -21,7 +21,7 @@
   width:70%;
   display:flex;
   flex-direction:row;
-  justify-content:flrx-end;
+  justify-content:flex-end;
   margin-right:15px;
 }
 
